Added Methods section
Added in the Methods section and formatted it in the RMarkdown file

--- a/in-progress.Rmd
+++ b/in-progress.Rmd
@@ -38,6 +38,11 @@ library(interactions)
 
 #### The aim of our project was to  discern the following: **Do the teacher's reported student math scores across the two timepoints (i.e., base year and first follow-up) correlate with 1) students' sex, 2) students' race/ethnicity, and 3) mother's highest education level of students?**
 
+## Methods
+#### The National Center for Education Statistics (NCES, n.d.-a) sponsored a longitudinal study to collect data from interviews with 10th grade students in 2002 and three follow-ups in 2004, 2006, and 2012 and their transcripts from high school and postsecondary education in 2005 and 2013. Data used for this project was extracted from the NCES Online Codebook and only included the base year and the first follow-up data (NCES, n.d.-b). Out of approximately 17,600 sophomores who were eligible for the base-year interviews, about 15,400 (87%) students completed a base-year questionnaire in 2002 (Bozick & Lauff, 2007). Around 7,100 of their teachers participated in completing questionnaires, out of the 750 participating schools in the United States (Bozick & Lauff, 2007).  For the first follow-up questionnaire, about 15,000 seniors in high school out of 16,500 eligible students (89%) participated in 2004 (Bozick & Lauff, 2007). 
+### Procedures
+#### Five variables (i.e., BYSEX, BYRACE, BYMOTHED, BYTXMSTD, F1TXMSTD) out of 4,012 variables included in this longitudinal study were filtered to answer the research question: Does the students’ standardized math scores across the two timepoints (i.e., base year and first follow-up) correlate with 1) students' sex, 2) students' race/ethnicity, and 3) mother's highest education level of students? As independent variables, students’ sex, race, and their mothers’ highest education were filtered. The first dependent variable, BYTXMSTD, is math standardized T scores that were measured in spring 2002 from 10th students. The second dependent variable, F1TXMSTD, is the math standardized T score collected in spring 2004 from 12th students. The standardized T scores in both variables are a transformation of the IRT theta estimate with a mean of 50 and a standard deviation of 10 (NCES, n.d.-b). The raw data were cleaned using the following R functions first: mutate(), select(), filter(), pivot_longer(), and pivot_wider(). Using the cleaned data and the R function of ggplot, a distribution plot, a boxplot, and a density plot were created to visualize the data, gain preliminary information about the distribution, and demonstrate results. The data was subsequently analyzed using two-way analysis of variance (ANOVA) along with post-hoc comparison using tukey’s HSD and a multiple regression analysis of race and mother’s education to answer the research questions. 
+
 ```{r data_information}
 # Data Information
 ## Variables
