Added Results section
Added in the results section and formatted it in the RMarkdown file

--- a/in-progress.Rmd
+++ b/in-progress.Rmd
@@ -43,6 +43,10 @@ library(interactions)
 ### Procedures
 #### Five variables (i.e., BYSEX, BYRACE, BYMOTHED, BYTXMSTD, F1TXMSTD) out of 4,012 variables included in this longitudinal study were filtered to answer the research question: Does the students’ standardized math scores across the two timepoints (i.e., base year and first follow-up) correlate with 1) students' sex, 2) students' race/ethnicity, and 3) mother's highest education level of students? As independent variables, students’ sex, race, and their mothers’ highest education were filtered. The first dependent variable, BYTXMSTD, is math standardized T scores that were measured in spring 2002 from 10th students. The second dependent variable, F1TXMSTD, is the math standardized T score collected in spring 2004 from 12th students. The standardized T scores in both variables are a transformation of the IRT theta estimate with a mean of 50 and a standard deviation of 10 (NCES, n.d.-b). The raw data were cleaned using the following R functions first: mutate(), select(), filter(), pivot_longer(), and pivot_wider(). Using the cleaned data and the R function of ggplot, a distribution plot, a boxplot, and a density plot were created to visualize the data, gain preliminary information about the distribution, and demonstrate results. The data was subsequently analyzed using two-way analysis of variance (ANOVA) along with post-hoc comparison using tukey’s HSD and a multiple regression analysis of race and mother’s education to answer the research questions. 
 
+## Results
+#### First, a student’s t test was conducted to examine if the math scores for the follow up year were significantly different than the math scores from the base year. The paired-student’s t-test resulted in t (13393) = 20.54, p < 0.001 with a mean difference of 0.84 between the base year and follow up year scores. The results suggest that the follow up year had significantly lower math scores than the base year. Next, a two-way analysis of variance (ANOVA) was conducted to examine the extent to which math scores depended on mother’s education and race. The main effect for race was significant f (1, 6) = 57.5, p < 0.0001. Additionally, the main effect for mother’s education was significant f (1, 7) = 270.2, p < 0.0001. The interaction between race and mother’s education for math score was significant f (2, 42) = 4.75, p < 0.0001. Due to the significant interaction effect, post-hoc pairwise comparisons were examined for single one-way ANOVA analysis of race and math as well as mother’s education and math using tukey’s HSD method for pairwise comparison. Nearly all of the comparisons for racial group and mother’s education were significant. The only pairings that were not significant were PhD, MD, or other advanced degree compared to master’s degree (p = .151), PhD, MD, or other advanced degree compared to graduated from 4 year college (p = 0.409), or attended college but did not graduate compared to graduated 2 year school (p = 1). For the race groups, only Native American/Alaskan compared to Hispanic (Race specified and unspecified) (p = 1), as Native American compared to black (p = 0.08), and Hispanic race specified compared to Hispanic race unspecified (p = 1). 
+#### A regression analysis was conducted to examine the math score results using race and mother’s education as predictors with the reference group being students whose mothers’ did not graduate from high school for the pairs and the reference for race being white students. Across the board, when race was held constant, student’s whose mother’s had higher levels of education were predicted to score significantly higher in math. Additionally, when mother’s education was held constant, white students were predicted to score significantly higher than black and Hispanic students and significantly lower than Asian students. Examining the pairs, black student scores were predicted to be significantly lower compared to white students at all levels of mother’s education except for the master’s degree level, p = 0.052. The predicted difference between Hispanic student math scores for both race specified and race unspecified did not have as consistent of a pattern, although scores were consistently predicted to be lower than white student scores, the difference was only significant for mother’s education of graduated high school, attend 2-year school, and graduated college for Hispanic race unspecified. The R2 is 0.214 suggesting that 21.4 percent of the change in math scores can be explained by race and mother’s education.  
+
 ```{r data_information}
 # Data Information
 ## Variables
