--- a/in-progress.Rmd
+++ b/in-progress.Rmd
@@ -162,7 +162,7 @@ els_wider_f1 <- els %>%
   )
 
 ```
-## Visualization 1
+### Visualization 1
 
 ```{r visualization 1, message=FALSE, warning=FALSE}
 vis1Data <- els_longer %>% 
@@ -183,7 +183,7 @@ vis1Data <- els_longer %>%
 vis1Data
 ```
 
-## Visualization 2
+### Visualization 2
 
 ```{r visualization 2, message=FALSE, warning=FALSE}
 vis2Data <- els_longer %>% 
@@ -228,9 +228,9 @@ vis2DataAlternate <- els_longer %>%
 vis2DataAlternate
 ```
 
-## Visualization 3
+### Visualization 3
 
-### Distribution plots
+#### Distribution plots
 These are simple distribution plots by Race, Sex, and Mother's education for year 1 and year 2 for standardized math scores.
 
 ```{r visualization 3, message=FALSE, warning=FALSE}
@@ -307,7 +307,7 @@ els_viz %>%
 # How about a density plot?
 ```
 
-### Boxplots
+#### Boxplots
 A boxplot of the standardized math scores by Race, Sex, and Mother's education.  
 
 ```{r visualization 4, message=FALSE, warning=FALSE}
@@ -353,7 +353,7 @@ els_viz %>%
        title = "Math Score by Sex and Year")
 ```
 
-### Density Plots
+#### Density Plots
 
 Finally let's examine the data using density plots.
 ```{r visualization 5, message=FALSE, warning=FALSE}
@@ -392,7 +392,7 @@ els_viz %>%
 
 ```
 
-## Descriptive Statistics
+### Descriptive Statistics
 
 ```{r descriptive, message=FALSE}
 #Created table by Race 
@@ -453,6 +453,10 @@ By_Sex %>%
       col.names = c("Reported Sex", "n", "Mean ", "SD")) %>%
   kable_classic()
 ```
+## Discussion
+#### The paper attempted to address the association of students’ math scores with sex, race, and maternal education across two-time frames to fill in the gaps found in the literature. The overall results represent a decrease in overall math scores from 2002 to 2004. Additionally, there was a significant difference in scores by sex. Male and female scores differed across both year time periods. 
+#### The second question looks at the relationship between math scores with ethnicity. The data collected information from seven different races; Asian, Black, Hispanic, Native American, White/Non-Hispanic, Hispanic (not specified), and more than one race. The overall results depict that Asian scored better than the rest of the races, and White scored better than Blacks and Hispanics. This is suggestive of the fact that race highly interferes with students’ scores, verifying that ethnic culture is a contributing factor in the academic performance of students.   
+#### Lastly, we looked at the mother’s education level and its effects on math results. The analysis indicates that in general, the higher educational status of mothers relates to higher academic achievement. The outcomes endorse the phenomenon of home literacy environment and its impact on child academic accomplishment. The literature posits that mothers, as primary caregivers, are the main agents for the promotion of positive academic experiences during children’s early years. Earlier studies showed that young mothers’ educational attainment is associated with quality home environments and with their children’s higher achievement in both reading and math. 
 
 ## More Statistics
 ### ANOVA Results
@@ -471,10 +475,9 @@ tukey_all <- TukeyHSD(aovRaceMothed, conf.level = 0.95)
 ```
 #### ANOVA Math Scores by Sex
 ```{r ANOVA_sex, warning=FALSE, message=FALSE, fig.width= 14, fig.height= 80}
-math_modSex <- lm(MATH ~ 1 + MOTHED*BYSEX, data = els_viz)
+math_modSex <- lm(MATH ~ 1 + BYSEX, data = els_viz)
 Anova(math_modSex, type = 3)
 
-# Too many comparisons. Instead we are going to look at one way anova comparisons
 aovSex <- aov(MATH ~ BYSEX, data = els_viz)
 tukey_Sex <- TukeyHSD(aovSex, conf.level = 0.95)
 ```
