--- a/in-progress.Rmd
+++ b/in-progress.Rmd
@@ -31,9 +31,9 @@ library(multcompView)
 library(interactions)
 #This is for the graph of the interaction plot between race and mother's education
 ```
-# Correlations Between Student Variables and Math Results Over Time: An Exploratory Study
+# Correlations Between Student Demographic Variables and Math Results Over Time: An Exploratory Study
 ## Abstract
-#### In this paper, we utilized data from the IES National Center for Education Statistics to examine the correlations between three student variables and math scores across two timepoints (baseline test and a follow-up two years later; [@bozick_2007]). This data set encompassed a large number of variables, of which we chose sex, race, and mother’s education level as our points of interest. Our analyses results in several significant outcomes. We found that there was a significant main effect of sex on math scores. There was also a significant main effect of both race and mother’s education level on math scores. Further, race and mother’s education level had a significant interaction effect on math scores. These results indicate that perhaps there is some difference between ethnic cultures or biases that contribute to the differences in math scores. The results are also consistent with prior literature finding that the level of education mother’s reach is correlated with their children’s academic achievement.  
+#### In this paper, we utilized data from the IES National Center for Education Statistics to examine the correlations between three student demographic variables and math scores across two timepoints (baseline test and a follow-up two years later; [@bozick_2007]). This data set encompassed a large number of variables, of which we chose sex, race, and mother’s education level as our points of interest. Our analyses results in several significant outcomes. We found that there was a significant main effect of sex on math scores. There was also a significant main effect of both race and mother’s education level on math scores. Further, race and mother’s education level had a significant interaction effect on math scores. These results indicate that perhaps there is some difference between ethnic cultures or biases that contribute to the differences in math scores. The results are also consistent with prior literature finding that the level of education mother’s reach is correlated with their children’s academic achievement.  
 
 ## Introduction
 #### The data set that we chose comes from the IES National Center for Education Statistics. The specific study is titled *Education Longitudinal Study of 2002* or ELS:2002.
@@ -166,7 +166,8 @@ els_wider_f1 <- els %>%
   )
 
 ```
-### Visualization 1
+### Figure 1
+#### Student standardized math scores by year and by sex
 
 ```{r visualization 1, message=FALSE, warning=FALSE}
 vis1Data <- els_longer %>% 
@@ -187,7 +188,8 @@ vis1Data <- els_longer %>%
 vis1Data
 ```
 
-### Visualization 2
+### Figure 2
+#### Student standardized math scores by year and by race
 
 ```{r visualization 2, message=FALSE, warning=FALSE}
 vis2Data <- els_longer %>% 
@@ -232,12 +234,10 @@ vis2DataAlternate <- els_longer %>%
 #vis2DataAlternate
 ```
 
-### Visualization 3
 
-#### Distribution plots
-These are simple distribution plots by Race, Sex, and Mother's education for year 1 and year 2 for standardized math scores.
 
-```{r visualization 3, message=FALSE, warning=FALSE}
+```{r name cleaning, message=FALSE, warning=FALSE}
+
 # Fixed the names to look better.
 els_viz <- els_longer %>%
   mutate(RACE = dplyr::recode(BYRACE, "Native American/Alaskan" = "Native American\n /Alaskan",
@@ -272,6 +272,11 @@ els_viz <- els_longer %>%
                                             "Master's degree",
                                             "PhD, MD,other\nadvanced degree")))
 
+```
+
+```{r distribution plots, message=FALSE, warning=FALSE, eval=FALSE}
+## Distribution plots
+#These are simple distribution plots by Race, Sex, and Mother's education for year 1 and year 2 for standardized math scores.
 
 # A plot of the distribution of math scores by race in year 1 and follow up  
 els_viz %>%
@@ -311,10 +316,9 @@ els_viz %>%
 # How about a density plot?
 ```
 
-#### Boxplots
-A boxplot of the standardized math scores by Race, Sex, and Mother's education.  
+ 
 
-```{r visualization 4, message=FALSE, warning=FALSE}
+```{r visualization 4, message=FALSE, warning=FALSE, eval=FALSE}
 # Boxplot of math scores by Race and Sex separated by Year
 els_viz %>%
   filter(!is.na(MATH) & !is.na(RACE)) %>%
@@ -329,7 +333,14 @@ els_viz %>%
        title = "Math Score by Race and Year",
        subtitle = "Separated by sex")+
   coord_flip()
+```
 
+
+### Figure 3
+#### Boxplot of student standardized math score by mother's education and by year
+
+
+```{r figure 3, message=FALSE, warning=FALSE}
 # Boxplot of math scores by Mother's education separated by Year
 els_viz %>%
   filter(!is.na(MATH) & !is.na(MOTHED)) %>%
@@ -343,7 +354,10 @@ els_viz %>%
   labs(x = "", 
        y = "Math Scores",
        title = "Math Score by Mother Education and Year")
+```
 
+
+```{r visualization 5, message=FALSE, warning=FALSE, eval=FALSE}
 # Boxplot of math scores by sex separated by year
 els_viz %>%
   filter(!is.na(MATH) & !is.na(BYSEX)) %>%
@@ -357,10 +371,9 @@ els_viz %>%
        title = "Math Score by Sex and Year")
 ```
 
-#### Density Plots
 
-Finally let's examine the data using density plots.
-```{r visualization 5, message=FALSE, warning=FALSE}
+```{r visualization 6, message=FALSE, warning=FALSE, eval=FALSE}
+#### Density Plots
 # Density plot of math scores by Race and Sex.
 els_viz %>%
   filter(!is.na(MATH) & !is.na(RACE)) %>%
@@ -396,9 +409,11 @@ els_viz %>%
 
 ```
 
-### Descriptive Statistics
 
-```{r descriptive, message=FALSE}
+### Descriptive Statistics
+#### Table 1
+Descriptive statistics by race
+```{r table 1, message=FALSE}
 #Created table by Race 
 By_Race <- els_longer %>%
   group_by(BYRACE) %>%
@@ -406,7 +421,8 @@ By_Race <- els_longer %>%
             mean_math = mean(MATH, na.rm = TRUE), 
            sd_math = sd(MATH, na.rm = TRUE))
 #Use describeBy to get kurtosis and skew 
-describeBy(els_longer$MATH, els_longer$BYRACE)
+# describeBy(els_longer$MATH, els_longer$BYRACE)
+
 
 By_Race %>%
   kbl(caption = "Math Descriptives by Race", 
@@ -414,6 +430,14 @@ By_Race %>%
       col.names = c("Reported Race", "n", "Mean ", "SD")) %>%
   kable_classic()
 
+
+```
+
+
+
+#### Table 2
+Descriptive statistics by mother's education level
+```{r table 2, message = FALSE}
 #table for Mothers Education 
 By_MotherED <- els_longer %>%
   group_by(BYMOTHED) %>%
@@ -421,27 +445,46 @@ By_MotherED <- els_longer %>%
             mean_math = mean(MATH, na.rm = TRUE), 
             sd_math = sd(MATH, na.rm = TRUE))
 
-describeBy(els_longer$MATH, els_longer$BYMOTHED)
+# describeBy(els_longer$MATH, els_longer$BYMOTHED)
 
 By_MotherED %>%
   kbl(caption = "Math Descriptives by Mother's Education Level", 
       digits = 2, 
       col.names = c("Mother's Education Level", "n", "Mean ", "SD")) %>%
   kable_classic()
- #table for year            
+
+
+```
+
+
+
+#### Table 3
+Descriptive statistics by year
+```{r table 3, message =FALSE}
+
+#table for year            
 By_Year <- els_longer %>%
   group_by(YEAR) %>%
   summarize(year_n = n(), 
             mean_math = mean(MATH, na.rm = TRUE), 
             sd_math = sd(MATH, na.rm = TRUE))
 
-describeBy(els_longer$MATH, els_longer$YEAR)
+#describeBy(els_longer$MATH, els_longer$YEAR)
 
 By_Year %>%
   kbl(caption = "Math Descriptives by Year", 
       digits = 2, 
       col.names = c("Year", "n", "Mean ", "SD")) %>%
   kable_classic()
+
+
+```
+
+
+
+#### Table 4
+Descriptive statistics by sex
+```{r table 4, message=FALSE}
 #Table by sex 
 By_Sex <- els_longer %>%
   group_by(BYSEX) %>%
@@ -449,69 +492,23 @@ By_Sex <- els_longer %>%
             mean_math = mean(MATH, na.rm = TRUE), 
             sd_math = sd(MATH, na.rm = TRUE))
 
- describeBy(els_longer$MATH, els_longer$BYSEX)
+ #describeBy(els_longer$MATH, els_longer$BYSEX)
 
 By_Sex %>%
   kbl(caption = "Math Descriptives by Sex", 
       digits = 2, 
       col.names = c("Reported Sex", "n", "Mean ", "SD")) %>%
   kable_classic()
+
+
 ```
+
 ## Discussion
 #### The paper attempted to address the association of students’ math scores with sex, race, and maternal education across two-time frames to fill in the gaps found in the literature. The overall results represent a decrease in overall math scores from 2002 to 2004. Additionally, there was a significant difference in scores by sex. Male and female scores differed across both year time periods. 
 #### The second question looks at the relationship between math scores with ethnicity. The data collected information from seven different races; Asian, Black, Hispanic, Native American, White/Non-Hispanic, Hispanic (not specified), and more than one race. The overall results depict that Asian scored better than the rest of the races, and White scored better than Blacks and Hispanics. This is suggestive of the fact that race highly interferes with students’ scores, verifying that ethnic culture is a contributing factor in the academic performance of students.   
 #### Lastly, we looked at the mother’s education level and its effects on math results. The analysis indicates that in general, the higher educational status of mothers relates to higher academic achievement. The outcomes endorse the phenomenon of home literacy environment and its impact on child academic accomplishment. The literature posits that mothers, as primary caregivers, are the main agents for the promotion of positive academic experiences during children’s early years. Earlier studies showed that young mothers’ educational attainment is associated with quality home environments and with their children’s higher achievement in both reading and math. 
 
-## More Statistics
-### ANOVA Results
-#### ANOVA Math Scores by Mother Education and Race
-
-```{r ANOVA, warning=FALSE, message=FALSE, fig.width= 14, fig.height= 80}
-
-library(car)
-math_mod <- lm(MATH ~ 1 + MOTHED*RACE, data = els_viz)
-Anova(math_mod, type = 3)
-
-# Too many comparisons. Instead we are going to look at one way anova comparisons
-aovRaceMothed <- aov(MATH ~ RACE*MOTHED, data = els_viz)
-tukey_all <- TukeyHSD(aovRaceMothed, conf.level = 0.95)
-
-```
-#### ANOVA Math Scores by Sex
-```{r ANOVA_sex, warning=FALSE, message=FALSE, fig.width= 14, fig.height= 80}
-math_modSex <- lm(MATH ~ 1 + BYSEX, data = els_viz)
-Anova(math_modSex, type = 3)
-
-aovSex <- aov(MATH ~ BYSEX, data = els_viz)
-tukey_Sex <- TukeyHSD(aovSex, conf.level = 0.95)
-```
-
-### Post Hoc Tukeys HSD Race and Mother's education
-#### Tukeys HSD Race Pairs
-```{r pairwise comparison viz, fig.height= 50, fig.width= 12}
-aovRace <-  aov(MATH ~ RACE,data=els_viz)
-tukey_race <- TukeyHSD(aovRace,conf.level = 0.95)
-
-# Visualization of Tukeys HSD pairwise comparisons by race
-plot(tukey_race, col = "brown")
-
-# Let's look if Mother's education is a predictor. Did not finish high school is the reference group
-#contrasts(els_viz$MOTHED)
-
-```
-
-#### Tukeys HSD Mother's Ed pairs
-```{r, fig.height= 100, fig.width= 12}
-aovMothed <-  aov(MATH ~ MOTHED,data=els_viz)
-tukey_mothed <- TukeyHSD(aovMothed,conf.level = 0.95)
-
-# Visualization of Tukeys HSD pairwise comparisons by race
-plot(tukey_mothed, col = "red")
-
-# Let's look if Mother's education is a predictor. Did not finish high school is the reference group
-#contrasts(els_viz$MOTHED)
-```
-
+## Appendix
 ### Student's T test Analysis
 #### Difference in scores between year 1-2
 
@@ -531,7 +528,8 @@ els_byyear <- els_viz %>%
 # Paired student's t test to examine if the mean from the follow up is significantly greater than the base year mean
 
 # Paired student's t test to examine if means from base year and follow up are significantly different.
-t.test(els_byyear$Base, els_byyear$Follow, paired = TRUE)
+
+### t.test(els_byyear$Base, els_byyear$Follow, paired = TRUE) ###
 
 # Visualization of the means by year. The t test suggests that there is a significant difference in scores by year, despite the means being similar, unfortunately, the mean of the follow up is significantly less than the base year. I was thinking we could focus on visualizing the data by race and mother's education and sex rather than comparing year 1 to year 2 data.
 ggwithinstats(data = els_viz, x = YEAR, y = MATH, 
@@ -545,8 +543,62 @@ ggwithinstats(data = els_viz, x = YEAR, y = MATH,
 
 ```
 
+
+### ANOVA Results
+#### ANOVA Math Scores by Mother Education and Race
+
+```{r ANOVA, warning=FALSE, message=FALSE, fig.width= 14, fig.height= 80}
+
+library(car)
+
+math_mod <- lm(MATH ~ 1 + MOTHED*RACE, data = els_viz)
+Anova(math_mod, type = 3)
+
+# Too many comparisons. Instead we are going to look at one way anova comparisons
+aovRaceMothed <- aov(MATH ~ RACE*MOTHED, data = els_viz)
+tukey_all <- TukeyHSD(aovRaceMothed, conf.level = 0.95)
+
+```
+#### ANOVA Math Scores by Sex
+```{r ANOVA_sex, warning=FALSE, message=FALSE, fig.width= 14, fig.height= 80}
+math_modSex <- lm(MATH ~ 1 + BYSEX, data = els_viz)
+Anova(math_modSex, type = 3)
+
+aovSex <- aov(MATH ~ BYSEX, data = els_viz)
+tukey_Sex <- TukeyHSD(aovSex, conf.level = 0.95)
+```
+
+### Post Hoc Tukeys HSD Pairwise Comparison
+#### Tukeys HSD Race Pairs
+```{r pairwise comparison viz, fig.height= 50, fig.width= 12}
+aovRace <-  aov(MATH ~ RACE,data=els_viz)
+tukey_race <- TukeyHSD(aovRace,conf.level = 0.95)
+
+# Visualization of Tukeys HSD pairwise comparisons by race
+plot(tukey_race, col = "brown")
+
+# Let's look if Mother's education is a predictor. Did not finish high school is the reference group
+#contrasts(els_viz$MOTHED)
+
+```
+
+#### Tukeys HSD Mother's Education Pairs
+```{r, fig.height= 100, fig.width= 12}
+aovMothed <-  aov(MATH ~ MOTHED,data=els_viz)
+tukey_mothed <- TukeyHSD(aovMothed,conf.level = 0.95)
+
+# Visualization of Tukeys HSD pairwise comparisons by race
+plot(tukey_mothed, col = "red")
+
+# Let's look if Mother's education is a predictor. Did not finish high school is the reference group
+#contrasts(els_viz$MOTHED)
+```
+
+
 ### Regression Analysis
-```{r regression, warning=FALSE, fig.height=50, fig.width=12}
+#### Table 5
+Student standardized math scores by race p-values
+```{r regression table 5, warning=FALSE}
 # First let us look if Race is a predictor. I will set white as the reference group since it is the largest group. 
 #contrasts(els_viz$RACE)
 # Looks like I set white as the reference earlier.  
@@ -567,7 +619,12 @@ race_pval %>%
   kable_classic()
   
 # Based on this, most groups are significantly different **except** for black/Native, Hispanic/Hispanic (Race specified), Native/Hispanic, Native/Hispanic (Race specified)
+```
 
+#### Table 6
+Student standardized math scores by mother's education level p-values
+
+```{r regression table 6, message=FALSE}
 mod_mothed <- lm(MATH ~ 1 + MOTHED, els_viz)
 #tab_model(mod_mothed)
 # This just tells us that groups are significantly different from each other
@@ -587,28 +644,26 @@ mothed_pval %>%
 ```
 
 
-#### Mother Education / Race Regression  
-I am not sure how to do a regression analysis of all three variables, but I can look at the regression analysis of math scores based on race/ethnicity and mother's education.   
+#### Figure 4: Regression Interaction Plot 
+Plot of predicted interaction between mother's education level and race on student's standardized math scores
 
-```{r regression mother edu and race, fig.width=20}
+* Error bars have been removed from this plot for legibility
+```{r regression figure 4, fig.width= 16, fig.height=14}
 mod_moth_race <- lm(MATH ~ 1 + MOTHED*RACE, data = els_viz)
 #summary(mod_moth_race)
 
 #tab_model(mod_moth_race)
-```
 
-#### Mother Edu / Race Regression Visualization  
-Now let's try to visualize this, it might get messy.  
-
-```{r, fig.width= 16, fig.height=14}
 # Visualization of regression models for mother's education and race
 #install.packages("interactions")
 cat_plot(mod_moth_race, pred = MOTHED, modx = RACE, geom = "line", interval = FALSE,vary.lty = TRUE)
 
 ```
 
-#### Mother ED / Race Bar graph
-This allows for the error bars to be included but crowds the data and makes analyzing the data across groups more difficult.
+#### Figure 5: Interaction Plot Bar graph
+Bar graph of predicted student standardized math scores based on on the interaction between mother's education level and race.
+
+* Error bars are included.
 
 ```{r, fig.width= 20, fig.height=10}
 cat_plot(mod_moth_race, pred = MOTHED, modx = RACE, geom = "bar")
