--- a/in-progress.Rmd
+++ b/in-progress.Rmd
@@ -7,8 +7,8 @@ output:
     toc: TRUE
     toc_float: TRUE
     code_folding: hide
-    bibliography: references.bib
-    nocite: '@*'
+    bibliography: references_2.bib
+  
 ---
 
 ```{r setup, include=FALSE}
@@ -22,7 +22,7 @@ library(psych)
 library(stats)
 library(ggstatsplot)
 #when installing say no to the prompt 
-library(multcompView)
+#library(multcompView)
 # visualizing the Tukeys pairwise comparison
 #library(sjPlot)
 #library(sjmisc)
@@ -33,7 +33,7 @@ library(interactions)
 ```
 # Correlations Between Student Demographic Variables and Math Results Over Time: An Exploratory Study
 ## Abstract
-#### In this paper, we utilized data from the IES National Center for Education Statistics to examine the correlations between three student demographic variables and math scores across two timepoints (baseline test and a follow-up two years later; [@bozick_2007]). This data set encompassed a large number of variables, of which we chose sex, race, and mother’s education level as our points of interest. Our analyses results in several significant outcomes. We found that there was a significant main effect of sex on math scores. There was also a significant main effect of both race and mother’s education level on math scores. Further, race and mother’s education level had a significant interaction effect on math scores. These results indicate that perhaps there is some difference between ethnic cultures or biases that contribute to the differences in math scores. The results are also consistent with prior literature finding that the level of education mother’s reach is correlated with their children’s academic achievement.  
+#### In this paper, we utilized data from the IES National Center for Education Statistics to examine the correlations between three student demographic variables and math scores across two timepoints (baseline test and a follow-up two years later; [@ingels2007] ). This data set encompassed a large number of variables, of which we chose sex, race, and mother’s education level as our points of interest. Our analyses results in several significant outcomes. We found that there was a significant main effect of sex on math scores. There was also a significant main effect of both race and mother’s education level on math scores. Further, race and mother’s education level had a significant interaction effect on math scores. These results indicate that perhaps there is some difference between ethnic cultures or biases that contribute to the differences in math scores. The results are also consistent with prior literature finding that the level of education mother’s reach is correlated with their children’s academic achievement.  
 
 ## Introduction
 #### The data set that we chose comes from the IES National Center for Education Statistics. The specific study is titled *Education Longitudinal Study of 2002* or ELS:2002.
@@ -668,6 +668,23 @@ Bar graph of predicted student standardized math scores based on on the interact
 ```{r, fig.width= 20, fig.height=10}
 cat_plot(mod_moth_race, pred = MOTHED, modx = RACE, geom = "bar")
 ```
+This is r-markdown document has [@dplyr] as a reference.
+
+This is r-markdown document has [@readr] as a reference.
+
+This is r-markdown document has [@tidyr] as a reference.
+
+This is r-markdown document has [@ggplot] as a reference.
+
+This is r-markdown document has [@ggridges] as a reference.
+
+This is r-markdown document has [@kableExtra] as a reference.
+
+This is r-markdown document has [@psych] as a reference.
+
+This is r-markdown document has [@r] as a reference.
+
+
 
 # References
 
